Update events. Edit correct structure